fieldset added for disabled purpose

--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -228,4 +228,8 @@
      border: none !important;
      width: 100px !important;
     }
+    fieldset{
+        border:none !important;
+        width: 100px !important;
+    }
 
