--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -232,6 +232,9 @@
         border:none !important;
         width: 100px !important;
     }
+    fieldset:disabled:hover{
+        cursor: not-allowed;
+      }
     /* @media only screen and (max-width: 1364px) {
         .table-outer{
           overflow-x: auto;
