--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2249,7 +2249,7 @@ li {
   display: none;
 }
 
-#divAddNewWeeklyTimeSheet,#divAddNewEmployeeMaster{
+#divAddNewWeeklyTimeSheet,#divAddNewEmployeeMaster,#divNewWeeklyTimeSheet{
   position: relative;
 }
 /* #newWeeklyTimeSheet{
