--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -235,6 +235,9 @@
     fieldset:disabled:hover{
         cursor: not-allowed;
       }
+      fieldset:disabled input:hover{
+        cursor: not-allowed;
+      }
     /* @media only screen and (max-width: 1364px) {
         .table-outer{
           overflow-x: auto;
