--- a/src/webparts/newMro/CSS/left-nav.css
+++ b/src/webparts/newMro/CSS/left-nav.css
@@ -43,23 +43,21 @@ color: #666666!important;
   padding-left: 10px;
 }
 .ul-leftnav li{
-  list-style-type: none;
-  padding: 2px 4px;
   display: inline-block;
-  color: #444;
-  margin: 0 7px;
 
 }
 .ul-leftnav li a{
-  color: #444 !important;
-  text-decoration-line: none !important;
-  font-size: 14px !important;
+  list-style-type: none;
+  padding: 5px 4px;
+  color: #444;
+  margin: 0 7px;
+  display: inline-block;
 }
 .ul-leftnav li:hover{
   border-bottom: 2px solid rgb(13 47 75);
   text-decoration: none;
 }
-.nav-click{
+.nav-click a{
   background-color: #f1f1f1 !important;
   border-bottom: 2px solid rgb(13 47 75);
 }
