--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2459,10 +2459,10 @@ top: 3px;
       width: auto !important;
     }
     .th-description{
-      width: 134px;
+      width: 195px;
     }
     .th-Project-Code{
-      width: 134px;
+      width: 106px;
     text-align: center;
     }
     .th-total{
@@ -2491,4 +2491,7 @@ padding: 3px 4px!important;
 }
 .GrandTotal, .WeekTotal, .BillableSubTotal{
   width: 100% !important;
+}
+.fw-bold{
+  font-weight: bold;
 }
