--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -782,15 +782,7 @@ input.c-input-readonly {
   .custom-checked:disabled {
     background: #ccc;
 }
-.loader-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color:rgba(255, 255, 255, .78);
-  z-index: 9;
-}
+
 
 
 
@@ -1933,6 +1925,8 @@ div[id^="_TopSpan_NotificationSpan"]{
 .span-link:hover{
   cursor:pointer;
 }
+
+
 .loader {
 z-index: 9;
 width: 60px;
@@ -1948,6 +1942,72 @@ position: fixed;
 left: 47.5%;
 top: 43.5%;
 }
+.loader-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(255, 255, 255, .78);
+  z-index: 9;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+ 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+ 
+@-webkit-keyframes colors {
+  0% {
+    border: 3px solid rgb(0, 128, 180);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+  25% {
+    border: 3px solid rgb(0, 82, 112);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+  50% {
+    border: 3px solid rgb(109, 61, 76);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+  100% {
+    border: 3px solid rgb(223,43,42);
+    border-left-color: transparent;
+    border-right-color: transparent;
+ 
+  }
+}
+ 
+@keyframes colors {
+  0% {
+    border: 3px solid rgb(0, 128, 180);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+  25% {
+    border: 3px solid rgb(0, 82, 112);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+  50% {
+    border: 3px solid rgb(109, 61, 76);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+  100% {
+    border: 3px solid rgb(223,43,42);
+    border-left-color: transparent;
+    border-right-color: transparent; 
+  }
+}
+
 .SynergyLogo{
   height: 60px;
   width: 60px;
