--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -34,11 +34,13 @@
     width: 185px;
   }
   .main-title{
-    padding: 10px;
+    padding: 4px;
+    padding-right: 10px;
+    margin-top: 4px;
     font-weight: 700;
     font-size: 2rem;
-    color: #444444;
-    border-right: 2px solid lightgray;
+    color: #444;
+    border-right: 2px solid #d3d3d3;
     padding-left: 20px;
     margin-left: 20px;
   }
@@ -1931,7 +1933,7 @@ div[id^="_TopSpan_NotificationSpan"]{
 z-index: 9;
 width: 60px;
 height: 60px;
-border: none !important;
+/* border: none !important; */
 /* border: 3px solid rgb(223,43,42); */
 border-left-color: transparent;
 border-right-color: transparent;
