--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -1723,8 +1723,9 @@ div[id^="_TopSpan_NotificationSpan"]{
 
 @media only screen and (max-width: 1406px) {
   .dataTables_wrapper-overflow{
-      /* width: 92vw!important; commented by sri*/
-      width: 94vw!important; 
+      width: 92vw!important; 
+      /* commented by sri */
+      /* width: 94vw!important;  */
   }
 }
 @media only screen and (max-width: 1100px) {
