--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -38,7 +38,7 @@
     padding-right: 10px;
     margin-top: 4px;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #444;
     border-right: 2px solid #d3d3d3;
     padding-left: 20px;
@@ -179,7 +179,7 @@
 .title {
   background-color: #0D2F4b;
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   padding: 8px 9px;
   position: absolute;
   width: 100%;
@@ -2532,8 +2532,9 @@ top: 3px;
       width: 195px;
     }
     .th-Project-Code{
-      width: 106px;
+      width: 115px;
     text-align: center;
+    margin: auto;
     }
     .th-total{
       width: 70px;
@@ -2611,7 +2612,7 @@ textarea{
 .toster-fa-icon{
   display: inline-block;
   margin: auto;
-  width: 62px;
+  width: 30px;
   height: 30px;
   text-align: center;
   border-radius: 50%;
