--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -4,12 +4,12 @@
   .FormContent input, .FormContent select{
       line-height: 1.1;
   }
-  .dataTables_wrapper-overflow{
+  .dataTables_wrapper-overflow,.table-NoScroll{
       padding-bottom: 16px;
   }
 }
 @supports (-ms-ime-align:auto) {
-  .dataTables_wrapper-overflow {
+  .dataTables_wrapper-overflow,.table-NoScroll {
       padding-bottom: 16px;
   }
 }
@@ -1572,12 +1572,25 @@ div[id^="_TopSpan_NotificationSpan"]{
   .dataTables_wrapper-overflow #piechart{
       margin: auto;
   }
+  .table-NoScroll #piechart{
+    margin: auto;
+}
   .dataTables_wrapper-overflow:hover{
       box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
       -webkit-box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
       -ms-box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
       -moz-box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
   }
+
+  .table-NoScroll:hover{
+    box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
+    -webkit-box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
+    -ms-box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
+    -moz-box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
+}
+
+
+
   /*Style for 'Generaton of Project Services Offers' Page under Technical */
   .paragraph-ol{
       position: absolute;
@@ -1722,7 +1735,7 @@ div[id^="_TopSpan_NotificationSpan"]{
   }
 
 @media only screen and (max-width: 1406px) {
-  .width-94vw{
+  .table-NoScroll{
           width: 94vw!important; 
   }
   .dataTables_wrapper-overflow{
@@ -1732,26 +1745,25 @@ div[id^="_TopSpan_NotificationSpan"]{
   }
 }
 @media only screen and (max-width: 1100px) {
-  .dataTables_wrapper-overflow{
+  .dataTables_wrapper-overflow,.table-NoScroll{
       width: 90vw!important;
   }
 }
 @media only screen and (max-width: 800px) {
-  .dataTables_wrapper-overflow{
+  .dataTables_wrapper-overflow,.table-NoScroll{
       width: 88vw!important;
   }
 }
 
-
-
-
   @media only screen and (max-width: 930px) {
-      .dataTables_wrapper-overflow{
+      .dataTables_wrapper-overflow,.table-NoScroll{
           overflow-x: auto;
           margin: auto;
           width: 83vw;
       }
   }
+
+
   @media only screen and (max-width: 767px) {
       .media-h-60{
           height: 60px;
@@ -1806,7 +1818,7 @@ div[id^="_TopSpan_NotificationSpan"]{
           padding-left: 15px;
       }
       /*E N D*/
-      .dataTables_wrapper-overflow{
+      .dataTables_wrapper-overflow,.table-NoScroll{
           overflow-x: auto;
           width: 79vw;
       }
@@ -2480,7 +2492,7 @@ li {
   color: rgb(241, 94, 94);
 } */
 .Sun,.Sat{
-  color: rgb(241, 94, 94);
+  color: rgb(241, 94, 94) !important;
   
    /* by sri */
    /* color: #e5a05b !important; */
