--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -1384,7 +1384,8 @@ div[id^="_TopSpan_NotificationSpan"]{
   border: 1px solid #e4e4e4;
 }
 .mandatoryhastrick{
-  color: red;
+  /* color: red; */
+  color: #e73e3e;
   font-size: 1rem;
 }
 .FormContent .upload{
