--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2634,7 +2634,16 @@ textarea{
   color: #fff;
 }
 
-
+.noConfiguration {
+  padding: 20px;
+font-size: 1.3rem;
+text-align: center;
+margin-top: 17vh;
+color: #727272;
+line-height: 1.6;
+display: flex;
+flex-direction: column;
+}
 
 .toster-fa-icon{
   display: inline-block;
@@ -2657,4 +2666,9 @@ textarea{
 
 .toster-error div {
   display: inline-block;
+}
+
+.ImgUnLink img{
+  height: 100px;
+  width: 100px;
 }
