--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -1038,6 +1038,9 @@ a:active {
 .top-11{
   top: -11px!important;
 }
+.top-12{
+  top: -12px!important;
+}
 .SaveButtons{
   line-height: 1.5;
   transition: all .15s ease-in-out;
