--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -391,6 +391,7 @@ span.comments-name {
 }
 .form-control-box input, .form-control-box select {
   border: 1px solid #ced4da!important;
+  font-size: 14px!important;
 }
 ::-ms-clear {
  display: none;
@@ -691,7 +692,7 @@ a{
   padding: 0 5px;
   background-color: #fff;
   z-index: 0;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
 }
 /* #chkIsActive{
@@ -745,13 +746,13 @@ input.c-input-readonly {
   padding-left: 7px;
   padding-top: 4px;
   border-radius: .25rem;
-  font-size: 14px;
+  font-size: 12px;
 }
 .light-text select{
   padding-left: 3px;
   padding-top: 4px;
   border-radius: .25rem;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 /* .light-text .form-control:focus,.form-select:focus{
