--- a/src/webparts/newMro/CSS/WeeklyTimesheet.css
+++ b/src/webparts/newMro/CSS/WeeklyTimesheet.css
@@ -240,7 +240,7 @@
 
     #weekstartAndweekEnd{
         margin-left: 10px;
-        color: #1b9ccf;
+        color: #008cc3;
         font-weight: 400;
         font-size: 18px;
         position: relative;
