--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -390,7 +390,7 @@ span.comments-name {
   display: inline-block;
 }
 .form-control-box input, .form-control-box select {
-  border: 1px solid #ced4da!important;
+  border: 1px solid #ced4da !important;
   font-size: 14px!important;
 }
 ::-ms-clear {
@@ -687,7 +687,7 @@ a{
 }
 .light-text label{
   position: absolute;
-  top: -12px;
+  top: -9px;
   left: 5px;
   padding: 0 5px;
   background-color: #fff;
@@ -740,6 +740,7 @@ input.c-input-readonly {
   top: 10px;
   width: 100%;
   z-index: 0;
+  border: 1px solid #ced4da !important;
   /* padding: .575rem .75rem; */
 }
 .light-text input{
@@ -1392,7 +1393,7 @@ div[id^="_TopSpan_NotificationSpan"]{
 .mandatoryhastrick{
   /* color: red; */
   color: #e73e3e;
-  font-size: 1rem;
+  font-size: 12px;
 }
 .FormContent .upload{
   border-bottom: 0;
@@ -2217,10 +2218,10 @@ padding: .375rem .75rem;
 
 
 .eQmQXs{
-  z-index: 999!important;
+  z-index: 99!important;
 }
 .z-in-9{
-  z-index: 999!important;
+  z-index: 99!important;
 }
 li {
   list-style-type: none;
