Css for reject icon in Reviewers dashboard

--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2557,6 +2557,8 @@ li {
 }
 .iconApprove,.iconReject{
   cursor: pointer;
+  width: 20px;
+  /* height: 15px; */
 }
 .fa-xmark{
   position: relative;
