bug fixes and UI

--- a/src/webparts/newMro/CSS/style.css
+++ b/src/webparts/newMro/CSS/style.css
@@ -2541,6 +2541,7 @@ li {
 
 .lkrJOt{
   font-family: sans-serif !important;
+  padding-left: 6px !important;
 }
 
 /* .Sun .TimeInput-input,.Sat .TimeInput-input{
